fixed issues with overlapping and misaligning borders

--- a/webapp/channels/src/sass/base/_structure.scss
+++ b/webapp/channels/src/sass/base/_structure.scss
@@ -143,10 +143,9 @@ body.app__body #root {
 
     .content-container {
         position: relative;
-        overflow: hidden;
         display: grid;
         background-color: var(--sidebar-bg);
-        border: solid 1px rgba(var(--center-channel-color-rgb),0.08);
+        outline: solid 1px rgba(var(--center-channel-color-rgb),0.08);
         border-radius: 12px;
         grid-area: main;
         grid-template:
@@ -257,10 +256,11 @@ body.app__body #root {
 
 #channel_view.channel-view {
     overflow: hidden;
-    border: solid 1px rgba(var(--center-channel-color-rgb), 0.12);
+    border-left: solid 1px rgba(var(--center-channel-color-rgb), 0.12);
     background: var(--center-channel-bg);
     border-radius: 12px;
     box-shadow: var(--elevation-1);
+    z-index: 17;
 }
 
 .rhs-open #channel_view.channel-view,
