--- a/webapp/channels/src/sass/layout/_sidebar-right.scss
+++ b/webapp/channels/src/sass/layout/_sidebar-right.scss
@@ -276,13 +276,13 @@
     overflow: hidden;
     height: 100%;
     border-radius: 12px;
-    box-shadow: var(--elevation-3);
-    outline: solid 1px rgba(var(--center-channel-color-rgb), 0.12);
+    box-shadow: var(--elevation-2);
+    border-left: solid 1px rgba(var(--center-channel-color-rgb), 0.12);
 
     &.expanded {
         position: absolute;
         z-index: 20;
-        box-shadow: var(--elevation-5);
+        box-shadow: var(--elevation-4);
 
         .sidebar-right__body {
             overflow: hidden;
@@ -303,7 +303,7 @@
         // If this is changed, the interaction with the App Bar icons must be tested
         //(see .app-bar__icon in components/app_bar/app_bar.scss)
         z-index: 20;
-        box-shadow: var(--elevation-3);
+        box-shadow: var(--elevation-2);
 
         .sidebar-right-container {
             height: 100%;
@@ -311,7 +311,6 @@
 
         .sidebar--right__header {
             flex-basis: 63px;
-            box-sizing: content-box;
         }
 
         .sidebar--right__title {
